add csrf_meta_tag to layout

--- a/app/views/layouts/cms.html.erb
+++ b/app/views/layouts/cms.html.erb
@@ -13,6 +13,7 @@
   <!--[if lte IE 8]>
   <%= stylesheet_link_tag '/cms/stylesheets/ie' %>
   <![endif]-->
+  <%= csrf_meta_tag %>
 </head>
 <body id="cms">
   <div id="header">
